Day 7: Add role-based authorization